--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.6.2",
+    "accordion-collapse-react-native": "^0.1.11",
+    "axios": "^0.19.0",
     "firebase": "^7.1.0",
     "moment": "^2.24.0",
     "react": "16.9.0",
     "react-native": "0.61.2",
-    "react-navigation": "^4.0.10"
+    "react-native-gesture-handler": "^1.4.1",
+    "react-navigation": "^4.0.10",
+    "react-navigation-stack": "^1.5.1",
+    "styled-components": "^4.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
