--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react": "16.9.0",
     "react-native": "0.61.2",
     "react-native-gesture-handler": "^1.4.1",
+    "react-native-paper": "^2.16.0",
+    "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.5.1",
     "styled-components": "^4.4.0"
